[package]
name = "basecracker"
version = "0.1.1"
edition = "2021"
authors = ["skyf0l <skyf0lmails@proton.me>"]
description = "Encode, Decode and Crack encoded data, useful to crack some random encoded strings in CTFs."
repository = "https://github.com/skyf0l/BaseCracker"
license = "MIT OR Apache-2.0"
categories = ["command-line-utilities", "encoding", "text-processing"]
keywords = ["encoder", "decoder", "cracker", "ctf", "guessing"]
include = [
  "src/**/*",
  "Cargo.toml",
  "LICENSE*",
  "README.md",
]

[dependencies]
thiserror = "1"
clap = { version = "4", features = ["derive", "env"] }
main_error = "0.1"
iterator-ext = "0.2"

base58 = "0.2"
bs62 = "0.1"
base64 = "0.21"
base85 = "1"
